--- a/odoo_bbdd/docker-compose.yml
+++ b/odoo_bbdd/docker-compose.yml
@@ -12,3 +12,4 @@ services:
   - /root/odoo/src:/opt/odoo/src
   - /root/odoo/conf:/opt/odoo/conf
   - /root/odoo/log:/var/log/odoo
+  - /root/odoo/backups:/opt/odoo/backups
