--- a/odoo_replication/docker-compose.yml
+++ b/odoo_replication/docker-compose.yml
@@ -47,6 +47,8 @@ services:
   hostname: postgresb
   environment:
   - ROLE=STANDBY
+  depends_on:
+  - postgres
   networks:
    odoo_replication:
     ipv4_address: 192.168.204.20
