--- a/odoo_bbdd/odoo/Dockerfile
+++ b/odoo_bbdd/odoo/Dockerfile
@@ -1,6 +1,6 @@
-FROM javierfpisc/odoo:v13sinpostgres
+FROM javierfpisc/odoo:v14sinpostgres
 
-MAINTAINER javierfp <javierfp@iessanclemente.net>
+LABEL MAINTAINER=javierfp@iessanclemente.net
 
 #Copiamos el entrypoint.sh al container
 COPY entrypoint.sh /usr/bin/entrypoint.sh
