--- a/odoo_backups/docker-compose.yml
+++ b/odoo_backups/docker-compose.yml
@@ -9,4 +9,4 @@ services:
   - "5432:5432"
   #Mapeo del directorio de la MV en el container
   volumes:
-  - /root/odoo/src:/opt/odoo/src
+  - ~/odoo/src:/opt/odoo/src
