--- a/odoo_replication/postgres/Dockerfile
+++ b/odoo_replication/postgres/Dockerfile
@@ -1,11 +1,13 @@
-FROM javierfpisc/postgres:v11
+FROM debian:buster
 
 #Copiamos el entrypoint.sh al container
 COPY entrypoint.sh /usr/bin/entrypoint.sh
 
 #Damos permiso al entrypoint
-RUN set -x; \
-	chmod +x /usr/bin/entrypoint.sh
+RUN chmod +x /usr/bin/entrypoint.sh
+
+#Instalamos apache2 para pgadmin4
+RUN apt update && apt install -y apache2 postgresql postgresql-client vim
 
 #Comando para arrancar ssh y entrar en bucle de espera
 ENTRYPOINT ["/usr/bin/entrypoint.sh"]
