--- a/odoo_replication/docker-compose.yml
+++ b/odoo_replication/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   - "8069:8069"
   #Mapeo del directorio de la MV en el container
   volumes:
-  - /root/odoo/src:/opt/odoo/src
+  - ~/odoo/src:/opt/odoo/src
   networks:
    odoo_replication:
     ipv4_address: 192.168.204.13
