--- a/odoo_replication/odoo/Dockerfile
+++ b/odoo_replication/odoo/Dockerfile
@@ -1,13 +1,12 @@
-FROM javierfpisc/odoo:v13sinpostgres
+FROM javierfpisc/odoo:v14conpostgres
 
-MAINTAINER javierfp <javierfp@iessanclemente.net>
+LABEL MAINTAINER=javierfp@iessanclemente.net
 
 #Copiamos el entrypoint.sh al container
 COPY entrypoint.sh /usr/bin/entrypoint.sh
 
 #Damos permiso al entrypoint
-RUN set -x; \
-	chmod +x /usr/bin/entrypoint.sh
+RUN chmod +x /usr/bin/entrypoint.sh
 
 #Copiamos el archivo odoo.conf
 COPY odoo.conf /opt/odoo/odoo.conf
