--- a/odoo_bbdd/postgres/Dockerfile
+++ b/odoo_bbdd/postgres/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:bullseye
+FROM debian:12
 
 #Copiamos el entrypoint.sh al container
 COPY entrypoint.sh /usr/bin/entrypoint.sh
@@ -7,7 +7,7 @@ COPY entrypoint.sh /usr/bin/entrypoint.sh
 RUN chmod +x /usr/bin/entrypoint.sh
 
 #Instalamos apache2 para pgadmin4
-RUN apt update && apt install -y apache2 postgresql postgresql-client vim
+RUN apt update && apt install -y apache2 postgresql postgresql-client vim && apt clean
 
 #Comando para arrancar ssh y entrar en bucle de espera
 ENTRYPOINT ["/usr/bin/entrypoint.sh"]
